# deepLearn1

./: .gitignore  README.md  Readme.md  pyproject.toml
algorithm/: BinarySearch.py  __init__.py
mypytorch/: __init__.py  fullconection1.py  pytorchQuickstart.py
mypytorch/FCN/: FCN_Backbone.py  FCN_net.py  __init__.py  dataprocess.py  train.py  transforms.py
mypytorch/FCN/train_utils/: train_and_eval.py
mypytorch/U2Net/: U2Net.py  __init__.py  data_process.py  distrubition.py  test_U2Net.py  test_type.py
mypytorch/Unet/: Readme.md  __init__.py  distribute_utils.py  modelNet.py  modelNet_test.py  mydataset.py  read_config.py  train.py
tests/: __init__.py  test_module.py
